# smufl_renderer

./: ANALISE_TECNICA.md  CHANGELOG.md  CORRECAO_PROBLEMA_HASTES_AUSENTES.md  CORRECAO_PROBLEMA_OPTICAL_CENTER.md  IMPROVEMENTS.md  PROBLEMAS_IDENTIFICADOS.md  README.md  RELATORIO_FINAL_IMPLEMENTACOES.md  RELATORIO_TIPOGRAFIA_MUSICAL.md  RESUMO_CORRECOES_APLICADAS.md  pubspec.yaml
.claude/: settings.local.json
bravura-master/installers/windows/: bravura-installer.iss
example/: README.md  pubspec.yaml
example/.claude/: settings.local.json
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/smufl_renderer_example/: MainActivity.kt
example/assets/: complex_music.json  sample_music.json
example/lib/: advanced_example.dart  main.dart
example/lib/examples/: accidentals_example.dart  advanced_example.dart  advanced_features_example.dart  articulations_example.dart  basic_example.dart  beams_and_tuplets_example.dart  beams_example.dart  chords_example.dart  clef_positioning_example.dart  clefs_example.dart  complete_advanced_elements.dart  complete_articulations_ornaments.dart  complete_clefs_demo.dart  complete_improvements_demo.dart  complete_music_piece.dart  complete_notation_example.dart  complex_example.dart  comprehensive_symbols_example.dart  contemporary_example.dart  corrected_ornaments_example.dart  debug_visual_example.dart  dots_and_ledgers_example.dart  dynamics_example.dart  flags_vs_beams_example.dart  grace_notes_example.dart  jazz_example.dart  key_signatures_example.dart  microtonal_example.dart  ornaments_example.dart  percussion_example.dart  performance_example.dart  precision_test_example.dart  professional_ornaments_example.dart  repeats_example.dart  rhythmic_figures_example.dart  simple_debug_example.dart  slurs_ties_example.dart  tempo_agogics_example.dart  test_corrections.dart  test_pitch_accuracy.dart  (+1 more)
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
lib/: smufl_renderer.dart
lib/src/engraving/: engraving_rules.dart
lib/src/layout/: beam_grouper.dart  beam_grouping.dart  bounding_box.dart  collision_detector.dart  layout_engine.dart  skyline_calculator.dart  slur_calculator.dart
lib/src/music_model/: advanced_elements.dart  duration.dart  musical_element.dart  pitch.dart  tablature.dart
lib/src/parsers/: json_parser.dart  musicxml_parser.dart
lib/src/rendering/: advanced_painter.dart  collision_detector.dart  music_painter.dart  new_music_painter.dart  performance_optimizer.dart  slur_calculator.dart  smufl_positioning_engine.dart  staff_coordinate_system.dart  staff_position_calculator.dart  staff_renderer.dart
lib/src/rendering/renderers/: articulation_renderer.dart  bar_element_renderer.dart  barline_renderer.dart  base_glyph_renderer.dart  chord_renderer.dart  glyph_renderer.dart  group_renderer.dart  note_renderer.dart  ornament_renderer.dart  rest_renderer.dart  symbol_and_text_renderer.dart  tuplet_renderer.dart
lib/src/smufl/: glyph_categories.dart  smufl_coordinates.dart  smufl_metadata_loader.dart
lib/src/theme/: music_score_theme.dart
smufl-main/: .gitmodules  Cargo.toml  LICENSE  README.md
smufl-main/.github/: dependabot.yml
smufl-main/.github/workflows/: main.yml
smufl-main/scripts/: gen-readme.sh
smufl-main/src/: anchors.rs  bounding_box.rs  coord.rs  engraving_defaults.rs  glyph.rs  glyph_advance_widths.rs  glyph_anchors.rs  glyph_bounding_boxes.rs  glyph_data.rs  glyph_or_unknown.rs  lib.rs  metadata.rs  staff_spaces.rs
smufl-main/src/snapshots/: smufl__metadata__tests__from_reader@Sebastian.json.snap  smufl__metadata__tests__from_reader@bravura_metadata.json.snap  smufl__metadata__tests__from_reader@leipzig_metadata.json.snap  smufl__metadata__tests__from_reader@leland_metadata.json.snap  smufl__metadata__tests__from_reader@petaluma_metadata.json.snap
verovio_flutter/: README.md  ffigen.yaml  pubspec.yaml
verovio_flutter/android/: build.gradle  settings.gradle
verovio_flutter/android/src/main/: AndroidManifest.xml
verovio_flutter/android/src/main/cpp/: CMakeLists.txt
verovio_flutter/ios/: verovio_flutter.podspec
verovio_flutter/ios/Classes/: verovio_flutter.c
verovio_flutter/lib/: verovio_flutter.dart  verovio_flutter_bindings_generated.dart
verovio_flutter/linux/: CMakeLists.txt
verovio_flutter/macos/: verovio_flutter.podspec
verovio_flutter/src/: CMakeLists.txt  verovio_flutter.cpp  verovio_flutter.h  verovio_flutter_backup.cpp  verovio_flutter_dummy_backup.cpp
verovio_flutter/windows/: CMakeLists.txt
